<resources>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="app_name">SP1</string>
    <!--    For the activity_view_job-->
    <string name="job_description">Job Description</string>
    <string name="job_detailed">Provide food and water.
Brush fur and teeth and carry out other types of grooming.
Walk dogs.
Clean litter boxes.
Give medications, if applicable.
Pet sitters should also be responsible for notifying owners and taking pets to the vet if they should become sick or suffer an injury while under their supervision.
    </string>
    <string name="job_employer">Jane Mwangi</string>
    <string name="job_location">Nairobi</string>
    <string name="image_description">A simple image</string>
    <!--    Accept Button-->
    <string name="accept_job">Accept Job</string>
    <!--    Decline Button-->
    <string name="decline_job">Decline Job</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="county">
        <item>Mombasa</item>
        <item>Nairobi</item>
        <item>Kisumu</item>
        <item>Nakuru</item>
        <item>Eldoret</item>
        <item>Machakos</item>
        <item>Lamu</item>
    </string-array>
    <string-array name="person_name">
        <item>Jane Mwangi</item>
        <item>Austin Mwandoe</item>
        <item>Nicole Atieno</item>
        <item>Sonia Splendour</item>
        <item>James Gichuru</item>
        <item>Michelle Anika</item>
        <item>Gloria Muni</item>
    </string-array>
    <string-array name="location">
        <item>Sangale Road</item>
        <item>Moi Avenue</item>
        <item>Accra Road</item>
        <item>Kenyatta Lane</item>
        <item>Juja City</item>
        <item>Oginga Street</item>
        <item>Limpopo Highway</item>
    </string-array>
    <string-array name="price">
        <item>12</item>
        <item>322</item>
        <item>54</item>
        <item>70</item>
        <item>30</item>
        <item>400</item>
        <item>890</item>
    </string-array>
    <!--    Wallet Fragment-->
    <string-array name="status">
        <item>Completed</item>
        <item>Pending</item>
        <item>Ongoing</item>
        <item>Pending Payment</item>
    </string-array>
    <string-array name="employer_name">
        <item>Annie Wairimu</item>
        <item>Tommie Kinua</item>
        <item>Jackson Kiprop</item>
        <item>Jack Reacher</item>
    </string-array>
    <string-array name="start_date">
        <item>22-10-2022</item>
        <item>11-12-2021</item>
        <item>1-1-2023</item>
        <item>12-5-2022</item>
    </string-array>
    <string-array name="timeframe">
        <item>1 week</item>
        <item>3 weeks</item>
        <item>2 months</item>
        <item>2 years</item>
    </string-array>
    <string-array name="wallet_price">
        <item>132</item>
        <item>320</item>
        <item>280</item>
        <item>100</item>
    </string-array>


</resources>